--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <!--INDEX IMATGE LOGO TASTY'S-->
-<img src="logo-capçalera.png"  alt="logo-tasty's">
+<img src="./logo-capçalera.png"  alt="logo-tasty's">
